--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Comic Book</string>
+    <string name="app_name">Comic Books</string>
     <string name="admin_panel">ADMIN PANEL</string>
     <string name="abc_gmail_com">abc@gmail.com</string>
     <string name="add_pdf">+ Add Pdf</string>
